# pico-projects

./: .gitignore  CMakeLists.txt  README.md
average/: CMakeLists.txt  average.S
binarycounter/: CMakeLists.txt  binarycounter.S
helloworld/: CMakeLists.txt  HelloWorld.S
lab2/task1/helloworld/: CMakeLists.txt  HelloWorld.S
lab2/task2/trafficlight/: flashledssdk.S  trafficlights.S
lab2/task3/counter/: CMakeLists.txt  binarycounter.S
lab2/task4/: CMakeLists.txt
led_button/: CMakeLists.txt  led_button.S  sdklink.c
led_button_binarycounter_interrupts/: CMakeLists.txt  led_button_binarycounter_interrupts.c
led_button_binarycounter_interrupts_timer/: CMakeLists.txt  led_button_binarycounter_interrupts_timer.c
led_button_gpiofunc/: CMakeLists.txt  led_button_gpiofunc.c
led_button_hardwareCfunc/: CMakeLists.txt  led_button_hardwareCfunc.c
led_button_hardwareCfunc_2leds/: CMakeLists.txt  led_button_hardwareCfunc_2leds.c
led_button_nofunc/: CMakeLists.txt  led_button_nofunc.S  sdklink.c
segmentdisplay/: CMakeLists.txt  segmentdisplay.S
test/: CMakeLists.txt  HelloWorld.S
trafficlight/: CMakeLists.txt  trafficlights.S
