cmake_minimum_required(VERSION 3.12)

# Pull in SDK (must be before project)
include(pico_sdk_import.cmake)
include(pico_extras_import_optional.cmake)

project(pico_projects C CXX ASM)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

if (PICO_SDK_VERSION_STRING VERSION_LESS "2.0.0")
    message(FATAL_ERROR "Raspberry Pi Pico SDK version 2.0.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
endif()

# set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})

# If you want debug output from USB (pass -DPICO_STDIO_USB=1) this ensures you don't lose any debug output while USB is set up
if (NOT DEFINED PICO_STDIO_USB_CONNECT_WAIT_TIMEOUT_MS)
    set(PICO_STDIO_USB_CONNECT_WAIT_TIMEOUT_MS 3000)
endif()

# Initialize the SDK
pico_sdk_init()


function(add_subdirectory_exclude_platforms NAME)
    if (ARGN)
        if (PICO_PLATFORM IN_LIST ARGN)
            message("Skipping ${NAME} example which is unsupported on this platform")
            return()
        endif()
        foreach(PATTERN IN LISTS ARGN)
            string(REGEX MATCH "${PATTERN}" MATCHED "${PICO_PLATFORM}")
            if (MATCHED)
                message("Skipping ${NAME} example which is unsupported on this platform")
                return()
            endif()
        endforeach()
    endif()
    add_subdirectory(${NAME})
endfunction()

# Add hello world example
add_subdirectory_exclude_platforms(helloworld)

# Add traffic lights example
add_subdirectory_exclude_platforms(trafficlight)

# Add binary counter example
add_subdirectory_exclude_platforms(binarycounter)

# Add 7-segment display example
add_subdirectory_exclude_platforms(segmentdisplay)

# Add 8 numbers average example
add_subdirectory_exclude_platforms(average)

# Add led button example
add_subdirectory_exclude_platforms(led_button)

# Add led button with no c function example
add_subdirectory_exclude_platforms(led_button_nofunc)

# Add led button with gpio function example
add_subdirectory_exclude_platforms(led_button_gpiofunc)

# Add led button with c hardware addressing example
add_subdirectory_exclude_platforms(led_button_hardwareCfunc)

# Add led button with c hardware addressing 2 leds example
add_subdirectory_exclude_platforms(led_button_hardwareCfunc_2leds)

# Add led button binary counter with interrupts
add_subdirectory_exclude_platforms(led_button_binarycounter_interrupts)

# Add led button binary counter with interrupts and timer
add_subdirectory_exclude_platforms(led_button_binarycounter_interrupts_timer)



add_compile_options(-Wall
        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
        -Wno-unused-function # we have some for the docs that aren't called
        )
if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-Wno-maybe-uninitialized)
endif()
