include_directories(${CMAKE_SOURCE_DIR})

add_executable(LED_Button_BinaryCounter_Interrupts_Timer
  led_button_binarycounter_interrupts_timer.c
)

pico_enable_stdio_uart(LED_Button_BinaryCounter_Interrupts_Timer 1)

pico_add_extra_outputs(LED_Button_BinaryCounter_Interrupts_Timer)

target_link_libraries(LED_Button_BinaryCounter_Interrupts_Timer pico_stdlib)